# AdventOfCode

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cpp
AoC25/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  year.cpp  year.hpp
AoC25/day_01/: day_01.cpp  day_01.hpp  main.cpp
AoC25/day_02/: day_02.cpp  day_02.hpp  main.cpp
AoC25/day_03/: day_03.cpp  day_03.hpp
AoC25/day_04/: day_04.cpp  day_04.hpp  main.cpp
AoC25/template/: day_03.cpp  main.cpp
aoc_utils/: CMakeLists.txt  Makefile  cmake_install.cmake
aoc_utils/include/aoc_utils/: io.hpp
aoc_utils/src/: io.cpp
cmake/: compiler_warnings.cmake
